[FIX] web_editor: Not possible to edit a link on safari
On Safari, when editing the template of a mail.mass_mailing,
clicking the "Read more" button (or any button that can
have a link to the website) didn't open pop up to set
the URL of the website.

PS: inspired from https://github.com/textAngular/textAngular/issues/762

opw:1889643

--- a/addons/web_editor/static/src/less/web_editor.ui.less
+++ b/addons/web_editor/static/src/less/web_editor.ui.less
@@ -1069,6 +1069,9 @@ body.editor_enable {
             left: 0;
         }
     }
+    .btn {
+        -webkit-user-select: initial;
+    }
 }
 
 #web_editor_inside_iframe {
